tests/errors/arguments/constants/string_invalid_01.src
.IPPcode18
move GF@var String@